# PMPrimer

./: BLUEPRINT.md  LICENSE  MANIFEST.in  README.md  README_CN.md  README_EN.md  intro.md  piece.py  pmprimer.py  setup.cfg  setup.py
piece/: __auxiliary__.py  __init__.py  piecebase.py  piecedataprogress.py  piecedefine.py  piecedesign.py  pieceevaluate.py  piecemain.py  piecentry.py  primerdesign.py
