[metadata]
name = PMPrimer
version = 1.0.1
author = Nerium
long_description = file: README.md # 从文件中读取
license = MIT
url = 'https://github.com/AGIScuipeng/PMPrimer'
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: AIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires = 
    primer3-py
    seaborn
    pandas
    matplotlib
    biopython
    argparse
    collections

[options.entry_points]
console_scripts =
    pmprimer = piece.piecentry.entry