[metadata]
name = PMPrimer
version = 1.0.5
author = Nerium
long_description = file: README.md # 从文件中读取
license = MIT
url = 'https://github.com/AGIScuipeng/PMPrimer'
classifiers = 
    Environment :: Console
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    primer3-py
    seaborn
    pandas
    matplotlib
    biopython

[options.entry_points]
console_scripts =
    pmprimer = piece.piecentry:entry